syntax = "proto3";

package  user;
option go_package = "./user";

message reqUser{
  string userName  = 1;
  string password = 2;
}

message Rsp{
  int32 status = 1;
  string message=2;
}

service verifyUser{
  rpc Register(reqUser) returns (Rsp){}
  rpc Login(reqUser) returns (Rsp){}
  rpc ChangePassword(reqUser) returns (Rsp){}
}